# github-actions-demo

./: README.md  setup.cfg
.github/workflows/: pytest.yml
sample/: calc.py
tests/: test_calc.py
