[metadata]
name = bacchus
version = 0.2.0
# license = file: license.txt
description = module for feature extraction

[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires =
    numpy
    zeus @ git+ssh://git@github.com/epistra/zeus@v0.2.0

python_requires = >=3.10

[options.extras_require]
test =
    pytest

[flake8]
max-line-length = 119

[isort]
profile=black